<resources>
    <string name="app_name">Clock</string>
    <string name="timer">Timer</string>
    <string name="alarm">Alarm</string>
    <string name="stop_watch">Stop watch</string>
    <string name="world_clock">World clock</string>
    <string name="edit_button">Remove</string>
    <string name="add_button">Add</string>
    <string name="AM_time">AM</string>
    <string name="PM_time">PM</string>
    <string name="repeater">Repeate</string>
    <string name="Label">Label</string>
    <string name="sound">Sound</string>
    <string name="snoodze">Vibrate</string>
    <string name="delete_alarm">Delete Alarm</string>
    <string name="back">Back</string>

    <string-array name="day_repeate">
        <item>M</item>
    </string-array>
</resources>
