<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.thangnv.fu.view.activitys.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="@dimen/padding_layout">

        <ImageView
            android:id="@+id/btn_edit"
            android:layout_width="@dimen/actionbar_img_width"
            android:layout_height="@dimen/actionbar_img_height"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_remove" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/world_clock"
            android:textColor="@color/text_dark"
            android:textSize="@dimen/title_fragment_text_size"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/btn_add"
            android:layout_width="@dimen/actionbar_img_width"
            android:layout_height="@dimen/actionbar_img_height"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_add" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E0E0E0" />

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10">


    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/horizontal_line_height"
        android:background="@color/horizontal_line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/view_watch"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/padding_layout">

            <ImageView
                android:id="@+id/btn_clock"
                style="@style/BottomImageView"
                app:srcCompat="@drawable/ic_lens_selector" />

            <TextView
                android:id="@+id/txt_clock"
                style="@style/BottomTextStyle"
                android:text="@string/world_clock"
                android:textColor="@color/tab_text_selector"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/view_alarm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/padding_layout"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/btn_alarm"
                style="@style/BottomImageView"
                app:srcCompat="@drawable/ic_alarm_selector" />

            <TextView
                android:id="@+id/txt_alarm"
                style="@style/BottomTextStyle"
                android:text="@string/alarm"
                android:textColor="@color/tab_text_selector"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/view_timer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/padding_layout">

            <ImageView
                android:id="@+id/btn_timer"
                style="@style/BottomImageView"
                app:srcCompat="@drawable/ic_timer_selector" />

            <TextView
                android:id="@+id/txt_timer"
                style="@style/BottomTextStyle"
                android:text="@string/timer"
                android:textColor="@color/tab_text_selector"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/view_stop_watch"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/padding_layout">

            <ImageView
                android:id="@+id/btn_stop_watch"
                style="@style/BottomImageView"
                app:srcCompat="@drawable/ic_watch_selector" />

            <TextView
                android:id="@+id/txt_stop_watch"
                style="@style/BottomTextStyle"
                android:text="@string/stop_watch"
                android:textColor="@color/tab_text_selector"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
